--- a/src/index.css
+++ b/src/index.css
@@ -17,4 +17,10 @@
     overscroll-behavior: none;
     scroll-behavior: smooth;
   }
+
+  * {
+    -webkit-transform: translate3d(0, 0, 0);
+    -webkit-backface-visibility: hidden;
+    -webkit-transform-style: preserve-3d;
+  }
 }
